# music-league-predictor

./: #NEXT_PROMPT.txt#  .#NEXT_PROMPT.txt  .cache  .env.example  .gitignore  BT26_VOTER_SIMILARITY_ANALYSIS.txt  CLAUDE.md  CORRECTED_BT26_VOTER_ANALYSIS.txt  NEXT_PROMPT.txt~  NLP_MIGRATION_SUMMARY.md  PREDICTION_GUIDE.md  README.md  SCOUT_GUIDE.md  SCRAPER.md  SPOTIFY_SETUP.md  USAGE_GUIDE.md  activate.sh  add_spotify_creds.py  analyze_bt26_voters.py  audio_features_fallback.py  candidate_verification.py  config.py  debug_artist_truncation.py  debug_comments.py  debug_rounds.py  debug_scout_hang.py  debug_vote_parsing.py  debug_vote_structure.py  debug_votes.py  demo_voter_preferences.py  enhanced_audio_features.py  forecasting.py  generate_similarity_data.py  historical_patterns.py  login.py  lyrics_analysis.py  monitor.py  nlp_text_processor.py  playlist_discovery.py  predict_theme_template.py  (+19 more)
data/: debug_full_page.html  debug_league_85191779017d4150b28cc5a67946d57c.html  debug_league_content_373fcc4f19cc40fb982f8165f74be483.html  debug_league_content_53a48912931c4aff83c22fdda7b7718e.html  debug_league_content_55a841f91b27481da61e1c3105677fbf.html  debug_league_content_5b0806bfdde2452db97942747d138c21.html  debug_league_content_5cf2b455f9714830b6b10ee6153a6857.html  debug_league_content_5df98892757a4caf8593a7b7f7c696f3.html  debug_league_content_60da01e1e1e74732a01485600fcea8f9.html  debug_league_content_692059510196461a93b50dbcbfe11e47.html  debug_league_content_6a45b70e341d46d9a1833a5fcc3f0bdc.html  debug_league_content_6e41ae16fea6425682602c17ab84e89d.html  (+19 more)
(+114 files in other folders)
